--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,19 +1,20 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Readme Update
 
-# Controls when the workflow will run
 on:
-# 1시간에 한번씩 아래 스크립트를 실행한다.
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
   schedule:
     - cron: "0 */1 * * *"
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+
 jobs:
-  # This workflow contains a single job called "build"
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4   # checkout을 한 번만 사용
+      - uses: actions/checkout@v4
       - uses: actions/setup-node@v3
         with:
           node-version: 20
